--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -42,10 +42,16 @@ layout: default
 
     <!-- News -->
     {% if page.announcements and page.announcements.enabled %}
-      <h2>
-        <a href="{{ '/news/' | relative_url }}" style="color: inherit">news</a>
-      </h2>
+      <h2> News </h2>
       {% include news.liquid limit=true %}
+    {% endif %}
+
+    <!-- Publications -->
+    {% if page.publications %}
+      <h2> Publications </h2>
+      <div class="publications">
+        {% bibliography %}
+      </div>
     {% endif %}
 
     <!-- Latest posts -->
