--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -46,6 +46,7 @@
             {% if page.permalink == '/' %} {% assign about_title = page.title %} {% endif %}
           {% endfor %}
 
+          {% if site.navbar_enabled %}
           <!-- About -->
           <li class="nav-item {% if page.permalink == '/' %}active{% endif %}">
             <a class="nav-link" href="{{ '/' | relative_url }}">
@@ -117,6 +118,8 @@
               {% endif %}
             {% endif %}
           {% endfor %}
+          {% endif %}
+
           {% if site.search_enabled %}
             <!-- Search -->
             <li class="nav-item">
