--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,6 +19,7 @@ $green-color-dark: #009f06 !default;
 $green-color-light: #ddffdd !default;
 $green-color-bright: #11d68b !default;
 $dark-dark-green: #0F4D0F !default;
+$blue-green: #75E6DA !default;
 $purple-color: #b509ac !default;
 $light-purple-color: color.adjust($purple-color, $lightness: 25%);
 $pink-color: #f92080 !default;
